margin-and-padding/02-margin-and-padding-2/style.css
body {
  background: #eee;
  font-family: sans-serif;
}

.card {
  width: 400px;
  background: #fff;
  border: 8px solid white;
  margin: 16px auto;
}

.title {
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 8px;
  padding-top: 8px;
  background: #e3f4ff;
  margin: 8px;
  font-size: 16px;;
}

.content {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 16px;
  padding-bottom: 16px;
  background: #e3f4ff;
  margin: 0px;
}

.button-container {
  background: #e3f4ff;
  margin-left: 8px;
  margin-bottom: 8px;
  margin-right: 0px;
  padding: 8px;
  text-align: center;
}

button {
  background: white;
  border: 1px solid #eee;
  display: block;
  margin-left: 125px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 24px;
  padding-right: 24px;
}

